--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 node_modules/
 .elasticbeanstalk/
 .DS_Store
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+
+.idea/
+eb-node-express-signup.iml
