--- a/app_config.json
+++ b/app_config.json
@@ -1,5 +1,5 @@
 {
   "AWS_REGION": "us-west-2",
-  "STARTUP_SIGNUP_TABLE": "signup-table",
-  "NEW_SIGNUP_TOPIC": "arn:aws:sns:us-west-2:247845050016:signup-notifications"
+  "STARTUP_SIGNUP_TABLE": "my-signup-table",
+  "NEW_SIGNUP_TOPIC": "arn:aws:sns:us-west-2:317994125539:signup-notifications"
 }
